--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -205,6 +205,14 @@
     <Compile Include="Migrations\201810111011152_InitialModel.Designer.cs">
       <DependentUpon>201810111011152_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810111028457_CarsAndReservationsModel.cs" />
+    <Compile Include="Migrations\201810111028457_CarsAndReservationsModel.Designer.cs">
+      <DependentUpon>201810111028457_CarsAndReservationsModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810111032071_CarsAndReservationsModel1.cs" />
+    <Compile Include="Migrations\201810111032071_CarsAndReservationsModel1.Designer.cs">
+      <DependentUpon>201810111032071_CarsAndReservationsModel1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -293,6 +301,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201810111011152_InitialModel.resx">
       <DependentUpon>201810111011152_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810111028457_CarsAndReservationsModel.resx">
+      <DependentUpon>201810111028457_CarsAndReservationsModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810111032071_CarsAndReservationsModel1.resx">
+      <DependentUpon>201810111032071_CarsAndReservationsModel1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
