--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -219,6 +219,18 @@
     <Compile Include="Migrations\201810111949372_AddCarIdToReservationModel.Designer.cs">
       <DependentUpon>201810111949372_AddCarIdToReservationModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810112012147_LicensePlateAddedToReservationModelClass.cs" />
+    <Compile Include="Migrations\201810112012147_LicensePlateAddedToReservationModelClass.Designer.cs">
+      <DependentUpon>201810112012147_LicensePlateAddedToReservationModelClass.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810112023052_EditOfCarClassAnnotations.cs" />
+    <Compile Include="Migrations\201810112023052_EditOfCarClassAnnotations.Designer.cs">
+      <DependentUpon>201810112023052_EditOfCarClassAnnotations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810112051585_EditOfCarProperties.cs" />
+    <Compile Include="Migrations\201810112051585_EditOfCarProperties.Designer.cs">
+      <DependentUpon>201810112051585_EditOfCarProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -318,6 +330,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810111949372_AddCarIdToReservationModel.resx">
       <DependentUpon>201810111949372_AddCarIdToReservationModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810112012147_LicensePlateAddedToReservationModelClass.resx">
+      <DependentUpon>201810112012147_LicensePlateAddedToReservationModelClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810112023052_EditOfCarClassAnnotations.resx">
+      <DependentUpon>201810112023052_EditOfCarClassAnnotations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810112051585_EditOfCarProperties.resx">
+      <DependentUpon>201810112051585_EditOfCarProperties.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
