--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -239,6 +239,10 @@
     <Compile Include="Migrations\201810131926398_parkingPlaceAndItsStateModel.Designer.cs">
       <DependentUpon>201810131926398_parkingPlaceAndItsStateModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810131953171_addNameToParkingPlacesAndPopulateItsDbTable.cs" />
+    <Compile Include="Migrations\201810131953171_addNameToParkingPlacesAndPopulateItsDbTable.Designer.cs">
+      <DependentUpon>201810131953171_addNameToParkingPlacesAndPopulateItsDbTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -356,6 +360,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810131926398_parkingPlaceAndItsStateModel.resx">
       <DependentUpon>201810131926398_parkingPlaceAndItsStateModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810131953171_addNameToParkingPlacesAndPopulateItsDbTable.resx">
+      <DependentUpon>201810131953171_addNameToParkingPlacesAndPopulateItsDbTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
