--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -254,6 +254,10 @@
     <Compile Include="Migrations\201810140901537_AddParkingPlaceIdToReservationModelClass.Designer.cs">
       <DependentUpon>201810140901537_AddParkingPlaceIdToReservationModelClass.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810201608193_addStateOfReservationToModelAndPopulateItsStates.cs" />
+    <Compile Include="Migrations\201810201608193_addStateOfReservationToModelAndPopulateItsStates.Designer.cs">
+      <DependentUpon>201810201608193_addStateOfReservationToModelAndPopulateItsStates.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -262,9 +266,9 @@
     <Compile Include="Models\ParkingPlace.cs" />
     <Compile Include="Models\Reservation.cs" />
     <Compile Include="Models\StateOfPlace.cs" />
+    <Compile Include="Models\StateOfReservation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\ParkingViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -273,6 +277,7 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -368,6 +373,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -410,6 +416,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810140901537_AddParkingPlaceIdToReservationModelClass.resx">
       <DependentUpon>201810140901537_AddParkingPlaceIdToReservationModelClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810201608193_addStateOfReservationToModelAndPopulateItsStates.resx">
+      <DependentUpon>201810201608193_addStateOfReservationToModelAndPopulateItsStates.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
