--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -263,6 +263,10 @@
     <Compile Include="Migrations\201810201707422_stateOfReservationModelChange.Designer.cs">
       <DependentUpon>201810201707422_stateOfReservationModelChange.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810232049098_reservationModelUpdate.cs" />
+    <Compile Include="Migrations\201810232049098_reservationModelUpdate.Designer.cs">
+      <DependentUpon>201810232049098_reservationModelUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -427,6 +431,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810201707422_stateOfReservationModelChange.resx">
       <DependentUpon>201810201707422_stateOfReservationModelChange.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810232049098_reservationModelUpdate.resx">
+      <DependentUpon>201810232049098_reservationModelUpdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
