--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -276,6 +276,10 @@
     <Compile Include="Models\StateOfPlace.cs" />
     <Compile Include="Models\StateOfReservation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CarRepository.cs" />
+    <Compile Include="Repositories\ParkingPlaceRepository.cs" />
+    <Compile Include="Repositories\ReservationRepository.cs" />
+    <Compile Include="Repositories\StateOfPlaceRepository.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ParkingViewModel.cs" />
   </ItemGroup>
