--- a/HotelGarage/packages.config
+++ b/HotelGarage/packages.config
@@ -35,6 +35,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
   <package id="Modernizr" version="2.8.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net471" />
+  <package id="NUnit" version="3.11.0" targetFramework="net471" />
+  <package id="NUnit3TestAdapter" version="3.11.0" targetFramework="net471" />
   <package id="Owin" version="1.0" targetFramework="net471" />
   <package id="popper.js" version="1.14.0" targetFramework="net471" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net471" />
