--- a/HotelGarage.UnitTests/HotelGarage.UnitTests.csproj
+++ b/HotelGarage.UnitTests/HotelGarage.UnitTests.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="ParkingPlaceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReservationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
