--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -271,6 +271,10 @@
     <Compile Include="Migrations\201810232049098_reservationModelUpdate.Designer.cs">
       <DependentUpon>201810232049098_reservationModelUpdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811171848238_addNewStateOfPlaceIntoDb.cs" />
+    <Compile Include="Migrations\201811171848238_addNewStateOfPlaceIntoDb.Designer.cs">
+      <DependentUpon>201811171848238_addNewStateOfPlaceIntoDb.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -441,6 +445,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810232049098_reservationModelUpdate.resx">
       <DependentUpon>201810232049098_reservationModelUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811171848238_addNewStateOfPlaceIntoDb.resx">
+      <DependentUpon>201811171848238_addNewStateOfPlaceIntoDb.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
