--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Controllers\ReservationsController.cs" />
     <Compile Include="Dtos\ReservationDto.cs" />
     <Compile Include="Dtos\ParkingPlaceDto.cs" />
+    <Compile Include="Dtos\ReservationListDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -275,6 +276,10 @@
     <Compile Include="Migrations\201811171848238_addNewStateOfPlaceIntoDb.Designer.cs">
       <DependentUpon>201811171848238_addNewStateOfPlaceIntoDb.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811182142080_renameStateOfReservationStates.cs" />
+    <Compile Include="Migrations\201811182142080_renameStateOfReservationStates.Designer.cs">
+      <DependentUpon>201811182142080_renameStateOfReservationStates.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -299,15 +304,18 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\dataTables.bootstrap4.min.css" />
     <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\dataTables.bootstrap4.min.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
     <Content Include="Scripts\esm\popper-utils.min.js" />
     <Content Include="Scripts\esm\popper.js" />
     <Content Include="Scripts\esm\popper.min.js" />
+    <Content Include="Scripts\jquery.dataTables.min.js" />
     <Content Include="Scripts\ParkingOverviewScript.js" />
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
@@ -391,6 +399,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Parking\_ParkingPlace.cshtml" />
+    <Content Include="Views\Reservations\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -448,6 +457,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811171848238_addNewStateOfPlaceIntoDb.resx">
       <DependentUpon>201811171848238_addNewStateOfPlaceIntoDb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811182142080_renameStateOfReservationStates.resx">
+      <DependentUpon>201811182142080_renameStateOfReservationStates.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
