--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -280,6 +280,10 @@
     <Compile Include="Migrations\201811182142080_renameStateOfReservationStates.Designer.cs">
       <DependentUpon>201811182142080_renameStateOfReservationStates.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811222223592_noteFiledAddedIntoCarModel.cs" />
+    <Compile Include="Migrations\201811222223592_noteFiledAddedIntoCarModel.Designer.cs">
+      <DependentUpon>201811222223592_noteFiledAddedIntoCarModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -463,6 +467,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811182142080_renameStateOfReservationStates.resx">
       <DependentUpon>201811182142080_renameStateOfReservationStates.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811222223592_noteFiledAddedIntoCarModel.resx">
+      <DependentUpon>201811222223592_noteFiledAddedIntoCarModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
