--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -284,6 +284,10 @@
     <Compile Include="Migrations\201811222223592_noteFiledAddedIntoCarModel.Designer.cs">
       <DependentUpon>201811222223592_noteFiledAddedIntoCarModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811271944120_updateDatabseModelData.cs" />
+    <Compile Include="Migrations\201811271944120_updateDatabseModelData.Designer.cs">
+      <DependentUpon>201811271944120_updateDatabseModelData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -429,6 +433,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811222223592_noteFiledAddedIntoCarModel.resx">
       <DependentUpon>201811222223592_noteFiledAddedIntoCarModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811271944120_updateDatabseModelData.resx">
+      <DependentUpon>201811271944120_updateDatabseModelData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
