--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -288,6 +288,10 @@
     <Compile Include="Migrations\201811271944120_updateDatabseModelData.Designer.cs">
       <DependentUpon>201811271944120_updateDatabseModelData.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811272102374_numberOfStaysIntoCarModelClass.cs" />
+    <Compile Include="Migrations\201811272102374_numberOfStaysIntoCarModelClass.Designer.cs">
+      <DependentUpon>201811272102374_numberOfStaysIntoCarModelClass.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Car.cs" />
@@ -436,6 +440,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811271944120_updateDatabseModelData.resx">
       <DependentUpon>201811271944120_updateDatabseModelData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811272102374_numberOfStaysIntoCarModelClass.resx">
+      <DependentUpon>201811272102374_numberOfStaysIntoCarModelClass.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
