new struct to pass occupancy data into view, repository method changed to return also number of parking employees, corrected bug when name of the car driver was not shown correctly,

--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -321,6 +321,7 @@
     <Compile Include="Models\Car.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\OccupancyNumbersOfTheDay.cs" />
     <Compile Include="Models\ParkingPlace.cs" />
     <Compile Include="Models\Reservation.cs" />
     <Compile Include="Models\StateOfPlace.cs" />
