--- a/HotelGarage/packages.config
+++ b/HotelGarage/packages.config
@@ -36,6 +36,7 @@
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.0.0" targetFramework="net471" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net471" />
   <package id="Microsoft.Owin.Security.Twitter" version="4.0.0" targetFramework="net471" />
+  <package id="Microsoft.TypeScript.Compiler" version="3.1.5" targetFramework="net471" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
   <package id="Modernizr" version="2.8.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net471" />
