--- a/HotelGarage.UnitTests/HotelGarage.UnitTests.csproj
+++ b/HotelGarage.UnitTests/HotelGarage.UnitTests.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ParkingControllerTests.cs" />
+    <Compile Include="Extensions\ParkingControllerExtensions.cs" />
     <Compile Include="Models\CarTests.cs" />
     <Compile Include="Models\ParkingPlaceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
