--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -346,6 +346,14 @@
     <Compile Include="Persistence\Migrations\201811272102374_numberOfStaysIntoCarModelClass.Designer.cs">
       <DependentUpon>201811272102374_numberOfStaysIntoCarModelClass.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\202003272012583_introduceEnums.cs" />
+    <Compile Include="Persistence\Migrations\202003272012583_introduceEnums.Designer.cs">
+      <DependentUpon>202003272012583_introduceEnums.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Persistence\Migrations\202003272037113_addEnumPt2.cs" />
+    <Compile Include="Persistence\Migrations\202003272037113_addEnumPt2.Designer.cs">
+      <DependentUpon>202003272037113_addEnumPt2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Core\ViewModels\AccountViewModels.cs" />
     <Compile Include="Core\Models\Car.cs" />
@@ -353,8 +361,8 @@
     <Compile Include="Core\Models\OccupancyNumbersOfTheDay.cs" />
     <Compile Include="Core\Models\ParkingPlace.cs" />
     <Compile Include="Core\Models\Reservation.cs" />
-    <Compile Include="Core\Models\StateOfPlace.cs" />
-    <Compile Include="Core\Models\StateOfReservation.cs" />
+    <Compile Include="Core\Models\ParkingPlaceState.cs" />
+    <Compile Include="Core\Models\ReservationState.cs" />
     <Compile Include="Core\IUnitOfWork.cs" />
     <Compile Include="Persistence\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -362,10 +370,8 @@
     <Compile Include="Core\Repositories\ICarRepository.cs" />
     <Compile Include="Core\Repositories\IParkingPlaceRepository.cs" />
     <Compile Include="Core\Repositories\IReservationRepository.cs" />
-    <Compile Include="Core\Repositories\IStateOfPlaceRepository.cs" />
     <Compile Include="Persistence\Repositories\ParkingPlaceRepository.cs" />
     <Compile Include="Persistence\Repositories\ReservationRepository.cs" />
-    <Compile Include="Persistence\Repositories\StateOfPlaceRepository.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Core\ViewModels\ParkingViewModel.cs" />
   </ItemGroup>
@@ -508,6 +514,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201811272102374_numberOfStaysIntoCarModelClass.resx">
       <DependentUpon>201811272102374_numberOfStaysIntoCarModelClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\202003272012583_introduceEnums.resx">
+      <DependentUpon>202003272012583_introduceEnums.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\202003272037113_addEnumPt2.resx">
+      <DependentUpon>202003272037113_addEnumPt2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
